mobile header fix & banner z-index

--- a/styles/base.less
+++ b/styles/base.less
@@ -398,7 +398,7 @@ html:not(.no-js) {
   margin-left:auto;
   margin-right:auto;
   width: 100%;
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 769px) {
     width: @pageWidth;
     margin-left: auto;
     margin-right: auto;
@@ -703,7 +703,7 @@ body:not(.always-use-overlay-nav) {
 #header {
 
   width: 100%;
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 769px) {
     width: @pageWidth;
     margin-left: auto;
     margin-right: auto;
@@ -836,7 +836,7 @@ body:not(.always-use-overlay-nav) {
     //top: 0;
     //bottom: 0;
     //background-color: @bannerOverlayColor;
-    z-index: 99;
+    z-index: 999;
   }
 }
 
